<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="title_explore">Explore</string>
    <string name="title_message">Message</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="new_study_space_title">Create New Study Space</string>
    <string name="subject_id">Subject ID</string>
    <string name="course_number">Number</string>
    <string name="location">Location</string>
    <string name="location_specifics">Location Specifics</string>

    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="year">
        <item>Year</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5+</item>
        <item>Masters</item>
        <item>PHD</item>
    </string-array>

    <string-array name="faculty">
        <item>Faculty</item>
        <item>Applied Science</item>
        <item>Science</item>
        <item>Arts</item>
        <item>Forestry</item>
        <item>Business</item>
    </string-array>

    <string-array name="subject">
        <item>AANB</item>
        <item>ACAM</item>
        <item>ADED</item>
        <item>ADHE</item>
        <item>AFST</item>
        <item>AGEC</item>
        <item>AGRO</item>
        <item>AGSC</item>
        <item>ANAE</item>
        <item>ANAT</item>
        <item>ANSC</item>
        <item>ANTH</item>
        <item>APBI</item>
        <item>APPP</item>
        <item>APSC</item>
        <item>AQUA</item>
        <item>ARBC</item>
        <item>ARC</item>
        <item>ARCH</item>
        <item>ARCL</item>
        <item>ARST</item>
        <item>ARTC</item>
        <item>ARTE</item>
        <item>ARTH</item>
        <item>ARTS</item>
        <item>ASIA</item>
        <item>ASIC</item>
        <item>ASL</item>
        <item>ASLA</item>
        <item>ASTR</item>
        <item>ASTU</item>
        <item>ATSC</item>
        <item>AUDI</item>
        <item>BA</item>
        <item>BAAC</item>
        <item>BABS</item>
        <item>BAEN</item>
        <item>BAFI</item>
        <item>BAHC</item>
        <item>BAHR</item>
        <item>BAIM</item>
        <item>BAIT</item>
        <item>BALA</item>
        <item>BAMA</item>
        <item>BAMS</item>
        <item>BAPA</item>
        <item>BASC</item>
        <item>BASD</item>
        <item>BASM</item>
        <item>BATL</item>
        <item>BATM</item>
        <item>BAUL</item>
        <item>BEST</item>
        <item>BIOC</item>
        <item>BIOE</item>
        <item>BIOF</item>
        <item>BIOL</item>
        <item>BIOT</item>
        <item>BMEG</item>
        <item>BOTA</item>
        <item>BRDG</item>
        <item>BUED</item>
        <item>BUSI</item>
        <item>CAPS</item>
        <item>CCFI</item>
        <item>CCST</item>
        <item>CDSC</item>
        <item>CDST</item>
        <item>CEEN</item>
        <item>CELL</item>
        <item>CENS</item>
        <item>CHBE</item>
        <item>CHEM</item>
        <item>CHIL</item>
        <item>CHIN</item>
        <item>CHML</item>
        <item>CICS</item>
        <item>CIVL</item>
        <item>CLCH</item>
        <item>CLST</item>
        <item>CNPS</item>
        <item>CNRS</item>
        <item>CNTO</item>
        <item>COEC</item>
        <item>COGS</item>
        <item>COHR</item>
        <item>COLX</item>
        <item>COML</item>
        <item>COMM</item>
        <item>COMR</item>
        <item>CONS</item>
        <item>CPEN</item>
        <item>CPSC</item>
        <item>CRWR</item>
        <item>CSED</item>
        <item>CSIS</item>
        <item>CSPW</item>
        <item>CTLN</item>
        <item>CUST</item>
        <item>DANI</item>
        <item>DENT</item>
        <item>DERM</item>
        <item>DES</item>
        <item>DHYG</item>
        <item>DMED</item>
        <item>DPAS</item>
        <item>DRAM</item>
        <item>DSCI</item>
        <item>EADM</item>
        <item>ECED</item>
        <item>ECON</item>
        <item>ECPS</item>
        <item>EDCI</item>
        <item>EDCP</item>
        <item>EDST</item>
        <item>EDUC</item>
        <item>EECE</item>
        <item>ELEC</item>
        <item>ELI</item>
        <item>EMBA</item>
        <item>EMER</item>
        <item>ENDS</item>
        <item>ENED</item>
        <item>ENGL</item>
        <item>ENPH</item>
        <item>ENPP</item>
        <item>ENVE</item>
        <item>ENVR</item>
        <item>EOSC</item>
        <item>EPSE</item>
        <item>ERTH</item>
        <item>ETEC</item>
        <item>EXCH</item>
        <item>EXGR</item>
        <item>FACT</item>
        <item>FCOR</item>
        <item>FDNS</item>
        <item>FEBC</item>
        <item>FHIS</item>
        <item>FILM</item>
        <item>FINA</item>
        <item>FIPR</item>
        <item>FISH</item>
        <item>FIST</item>
        <item>FMED</item>
        <item>FMPR</item>
        <item>FMSC</item>
        <item>FMST</item>
        <item>FNEL</item>
        <item>FNH</item>
        <item>FNIS</item>
        <item>FNLG</item>
        <item>FNSP</item>
        <item>FOOD</item>
        <item>FOPR</item>
        <item>FPEN</item>
        <item>FRE</item>
        <item>FREN</item>
        <item>FRSI</item>
        <item>FRST</item>
        <item>FSCT</item>
        <item>GBPR</item>
        <item>GEM</item>
        <item>GENE</item>
        <item>GEOB</item>
        <item>GEOG</item>
        <item>GEOL</item>
        <item>GEOP</item>
        <item>GEPA</item>
        <item>GERM</item>
        <item>GPP</item>
        <item>GREK</item>
        <item>GRS</item>
        <item>GRSJ</item>
        <item>GSAT</item>
        <item>HCEC</item>
        <item>HCEP</item>
        <item>HCET</item>
        <item>HEBR</item>
        <item>HECO</item>
        <item>HESO</item>
        <item>HGSE</item>
        <item>HIED</item>
        <item>HIND</item>
        <item>HINU</item>
        <item>HIST</item>
        <item>HKIN</item>
        <item>HMEC</item>
        <item>HMED</item>
        <item>HPB</item>
        <item>HUNU</item>
        <item>HXAH</item>
        <item>HXDR</item>
        <item>HXEC</item>
        <item>HXEN</item>
        <item>HXFL</item>
        <item>HXFR</item>
        <item>HXGM</item>
        <item>HXGY</item>
        <item>HXHI</item>
        <item>HXMA</item>
        <item>HXMU</item>
        <item>HXPC</item>
        <item>HXPH</item>
        <item>HXPS</item>
        <item>HXPY</item>
        <item>HXRE</item>
        <item>HXSP</item>
        <item>HXWR</item>
        <item>IAR</item>
        <item>IEST</item>
        <item>IGEN</item>
        <item>IHHS</item>
        <item>INDE</item>
        <item>INDO</item>
        <item>INDS</item>
        <item>INFO</item>
        <item>INLB</item>
        <item>ISCI</item>
        <item>ITAL</item>
        <item>ITST</item>
        <item>IWME</item>
        <item>JAPN</item>
        <item>JRNL</item>
        <item>KIN</item>
        <item>KORN</item>
        <item>LAIS</item>
        <item>LANE</item>
        <item>LARC</item>
        <item>LASO</item>
        <item>LAST</item>
        <item>LATN</item>
        <item>LAW</item>
        <item>LFS</item>
        <item>LIBE</item>
        <item>LIBR</item>
        <item>LING</item>
        <item>LLED</item>
        <item>LWS</item>
        <item>MAED</item>
        <item>MANU</item>
        <item>MATH</item>
        <item>MDVL</item>
        <item>MECH</item>
        <item>MEDD</item>
        <item>MEDG</item>
        <item>MEDH</item>
        <item>MEDI</item>
        <item>MES</item>
        <item>MGMT</item>
        <item>MICB</item>
        <item>MIDW</item>
        <item>MINE</item>
        <item>MLED</item>
        <item>MMAT</item>
        <item>MMPE</item>
        <item>MRNE</item>
        <item>MTRL</item>
        <item>MUED</item>
        <item>MUSC</item>
        <item>NAME</item>
        <item>NEST</item>
        <item>NEUR</item>
        <item>NEPL</item>
        <item>NRSC</item>
        <item>NURS</item>
        <item>OBMS</item>
        <item>OBST</item>
        <item>OCCH</item>
        <item>OCGY</item>
        <item>OHS</item>
        <item>OMSS</item>
        <item>ONCO</item>
        <item>OPTH</item>
        <item>ORBI</item>
        <item>ORNT</item>
        <item>ORPA</item>
        <item>OSOT</item>
        <item>PAED</item>
        <item>PATH</item>
        <item>PCTH</item>
        <item>PERS</item>
        <item>PETE</item>
        <item>PHAR</item>
        <item>PHIL</item>
        <item>PHRM</item>
        <item>PHTH</item>
        <item>PHYL</item>
        <item>PHYS</item>
        <item>PLAN</item>
        <item>PLAS</item>
        <item>PLNT</item>
        <item>POLI</item>
        <item>POLS</item>
        <item>PORT</item>
        <item>PPEN</item>
        <item>PPGA</item>
        <item>PRIN</item>
        <item>PSYC</item>
        <item>PSYT</item>
        <item>PUNJ</item>
        <item>RADI</item>
        <item>READ</item>
        <item>RELG</item>
        <item>RES</item>
        <item>RGLA</item>
        <item>RGLT</item>
        <item>RGST</item>
        <item>RHSC</item>
        <item>RMES</item>
        <item>RMST</item>
        <item>RSOT</item>
        <item>RSPT</item>
        <item>RUSS</item>
        <item>SANS</item>
        <item>SCAN</item>
        <item>SCED</item>
        <item>SCIE</item>
        <item>SEAL</item>
        <item>SGES</item>
        <item>SLAV</item>
        <item>SOAL</item>
        <item>SOCI</item>
        <item>SOIL</item>
        <item>SOWK</item>
        <item>SPAN</item>
        <item>SPE</item>
        <item>SPHA</item>
        <item>SPPH</item>
        <item>SSED</item>
        <item>STAT</item>
        <item>STS</item>
        <item>SURG</item>
        <item>SWED</item>
        <item>SWFS</item>
        <item>TEST</item>
        <item>THFL</item>
        <item>THTR</item>
        <item>TIBT</item>
        <item>TRSC</item>
        <item>TSED</item>
        <item>UDES</item>
        <item>UFOR</item>
        <item>UKRN</item>
        <item>URDU</item>
        <item>URO</item>
        <item>UROL</item>
        <item>URST</item>
        <item>URSY</item>
        <item>VANT</item>
        <item>VGRD</item>
        <item>VISA</item>
        <item>VRHC</item>
        <item>VURS</item>
        <item>WMST</item>
        <item>WOOD</item>
        <item>WRDS</item>
        <item>WRIT</item>
        <item>ZOOL</item>
    </string-array>
</resources>