<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_study_space"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/new_study_space_title"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/new_study_space_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/whiteSpace1"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/new_study_space_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_study_space_title"/>

    <View
        android:id="@+id/lineBreak"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiteSpace1"
        tools:layout_marginTop="20dp" />

    <View
        android:id="@+id/whiteSpace2"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/lineBreak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineBreak"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/course_subject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiteSpace2"
        app:startIconDrawable="@drawable/ic_main_popup_subject"
        tools:layout_below="@id/whiteSpace2"
        tools:layout_marginTop="20dp">

        <AutoCompleteTextView
            android:id="@+id/course_subject_actv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12.3sp"
            android:hint="@string/subject_id"
            android:textColorHint="@color/places_autocomplete_search_hint"
            android:textColor="@color/black"
            android:maxLength="4"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/course_number_actv"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/course_subject"
        android:hint="@string/course_number"
        android:textColorHint="@color/places_autocomplete_search_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiteSpace2"
        app:startIconDrawable="@drawable/ic_main_popup_number"
        tools:layout_below="@id/lineBreak"
        tools:layout_marginTop="20dp">

<!--        <AutoCompleteTextView-->
<!--            android:id="@+id/course_number_actv"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="12.3sp"-->
<!--            android:hint="@string/course_number"-->
<!--            android:inputType="number"-->
<!--            android:textColorHint="@color/places_autocomplete_search_hint"-->
<!--            android:maxLength="4"-->
<!--            android:paddingTop="10dp"-->
<!--            android:paddingBottom="10dp"/>-->

    </com.google.android.material.textfield.TextInputEditText>

    <View
        android:id="@+id/whiteSpace3"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_subject" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/location"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_toEndOf="@id/course_subject"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/whiteSpace3"-->
<!--        app:startIconDrawable="@drawable/ic_main_popup_location"-->
<!--        tools:layout_below="@id/whiteSpace3"-->
<!--        tools:layout_marginTop="20dp">-->


<!-- FORMAL LOCATION FINDER USING GOOGLE MAP PLACE API. COSTS MONEY!-->
<!--    <androidx.fragment.app.FragmentContainerView-->
<!--        android:id="@+id/location_input"-->
<!--        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/location"-->
<!--        android:textSize="12.3sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/whiteSpace3"-->
<!--        tools:layout_below="@id/whiteSpace3"-->
<!--        tools:layout_marginTop="20dp"/>-->

    <com.google.android.material.textfield.TextInputEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:id="@+id/location_input2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:drawableStart="@drawable/ic_main_popup_location"
        android:textSize="12.3sp"
        android:drawablePadding="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whiteSpace3"
        tools:layout_below="@id/whiteSpace3"
        tools:layout_marginTop="20dp"/>

    <View
        android:id="@+id/whiteSpace4"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/location_input2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_input2" />

    <com.google.android.material.textfield.TextInputEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:id="@+id/location_specifics"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/location_specifics"
        android:drawableStart="@drawable/ic_main_popup_location_specifics"
        android:textSize="12.3sp"
        android:drawablePadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whiteSpace4"
        tools:layout_below="@id/whiteSpace4"
        tools:layout_marginTop="20dp"/>

    <View
        android:id="@+id/whiteSpace5"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/location_specifics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_specifics" />

</androidx.constraintlayout.widget.ConstraintLayout>